tests/test-files/parse-fn.txt
================================================================================
Malformed function
================================================================================

(package test-package)

(define f (fn))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:14
   |
 3 |  (define f (fn))
   |               ^ expected function arguments

================================================================================
Malformed function
================================================================================

(package test-package)

(define f (fn ()))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:17
   |
 3 |  (define f (fn ()))
   |                  ^ expected function body

================================================================================
Malformed function
================================================================================

(package test-package)

(define f (fn x 1))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:14
   |
 3 |  (define f (fn x 1))
   |                ^ malformed argument list
help: add parentheses
 3 | (define f (fn (x) 1))
   |               ---
